--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-express": "^9.0.0",
+    "cache-manager": "^5.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "square": "^30.0.0",
